# proxysql_scheduler

./: .gitignore  Cargo.toml  Dockerfile  README.md  readyset_proxysql_scheduler.cnf
.github/workflows/: build.yml  build_arm.yml  build_x64.yml
src/: config.rs  health_check.rs  hosts.rs  main.rs  messages.rs  proxysql.rs  queries.rs  readyset.rs  server.rs  sql_connection.rs
